--- a/app/static/css/nav_user.css
+++ b/app/static/css/nav_user.css
@@ -14,5 +14,5 @@
 }
 
 nav {
-	z-index: 10;
+	z-index: 11;
 }
